tools/1. manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment
  namespace: gitlab
  labels:
    name: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ee:19.0.0-ee.0
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 2222
            - containerPort: 5000
          resources:
            limits:
              cpu: "3"
              memory: "5Gi"
            requests:
              cpu: "2"
              memory: "4Gi"
          volumeMounts:
            - name: gitlab-configmap-vol
              mountPath: /etc/gitlab/gitlab.rb
              subPath: gitlab.rb # Sobrescribe el archivo con el ConfigMap

      volumes:
        - name: gitlab-configmap-vol
          configMap:
            name: gitlab-config-map
            items:
              - key: gitlab.rb
                path: gitlab.rb
