tools/1. manifest/igress_route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ingress
  namespace: gitlab
  labels:
    name: devops

spec:
  entryPoints:
    - web #80
  routes:
    # GitLab Web UI
    - match: Host(`gitlab.codeparce`)
      kind: Rule
      services:
        - name: gitlab-service
          port: 80

    # GitLab Container Registry
    - match: Host(`registry.gitlab.codeparce`)
      kind: Rule
      services:
        - name: gitlab-service
          port: 5000
